<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".EditAddActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/exit_edit_add_activity"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_margin="10sp"
        android:text="@string/exit_edit_add_activity"
        android:theme="@style/BlackButton"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:id="@+id/workshopNumber"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:inputType="number" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:theme="@style/TextAddLayout"
                android:text="@string/workshop_edit_add_activity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:id="@+id/productName"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"/>
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:theme="@style/TextAddLayout"
                android:text="@string/product_edit_add_activity" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">
            <EditText
                android:id="@+id/count"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.8"
                android:inputType="number" />
            <TextView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1.2"
                android:theme="@style/TextAddLayout"
                android:text="@string/count_edit_add_activity" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/accept_edit_add_activity"
        android:layout_width="match_parent"
        android:layout_height="60sp"
        android:layout_margin="10sp"
        android:text="@string/accept_edit_add_activity"
        android:theme="@style/BlackButton"/>

</LinearLayout>